# generic-clicker-game

./: Cargo.toml  README.md  build.sh  index.html  wireframe.html
.github/workflows/: build.yml
docs/: 404.html  generic-clicker-game-10856c384dd19639.js  generic-clicker-game-10856c384dd19639_bg.wasm  generic-clicker-game-19ee6a12e15f9534.js  generic-clicker-game-19ee6a12e15f9534_bg.wasm  generic-clicker-game-221979ebacd21eec.js  generic-clicker-game-221979ebacd21eec_bg.wasm  generic-clicker-game-27830ce80e8b3e7b.js  generic-clicker-game-27830ce80e8b3e7b_bg.wasm  generic-clicker-game-6131f7d253591e35.js  generic-clicker-game-6131f7d253591e35_bg.wasm  generic-clicker-game-630d5f100d6e5d76.js  generic-clicker-game-630d5f100d6e5d76_bg.wasm  generic-clicker-game-8a2dd4e5ab678f9e.js  generic-clicker-game-8a2dd4e5ab678f9e_bg.wasm  generic-clicker-game-9236d87ee01a2e93.js  generic-clicker-game-9236d87ee01a2e93_bg.wasm  generic-clicker-game-f7870c22cb51b9c7.js  generic-clicker-game-f7870c22cb51b9c7_bg.wasm  index.html
src/: game_logic.rs  game_page.rs  main.rs  upgrades.rs
src/demos/: constant_loop_demo.rs  local_storage_demo.rs  mod.rs
