[package]
name = "generic-clicker-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
# yew-router = { git = "https://github.com/yewstack/yew.git" }
# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4"
gloo-console = "0.3"
gloo = "0.11"
# lipsum = "0.9"

[dependencies.web-sys]
version = "0.3"
features = ["Navigator", "Storage"]
